--- a/index.html
+++ b/index.html
@@ -7,74 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/babel">
-      function App() {
-        return (
-          <div>
-            <h1>Hello, sup!</h1>
-            <MyButton />
-            <IsBiggerThan10 />
-            <Mailbox msgs={["Hi", "Welcome", "who dis", "tyfty"]} />
-            <PokemonList />
-            <Counter />
-            <CounterThree />
-          </div>
-        );
-      }
-
-      function MyButton() {
-        const buttonText = "Am a button";
-        function handleClick() {
-          alert("AAAAAAAAAA!!!");
-        }
-        return <button onClick={handleClick}>{buttonText}</button>;
-      }
-      function IsBiggerThan10(number) {
-        number = 5;
-        return number > 10 ? <h1>Is big!</h1> : <h1>Is smol</h1>;
-      }
-      function Mailbox({ msgs }) {
-        return (
-          <div>
-            {msgs.length > 0 && <h1>{msgs.length} unread messages </h1>}
-          </div>
-        );
-      }
-      function PokemonList() {
-        const pokemon = ["Bulbasaur", "Squirtle", "Charmander"];
-        const listItems = pokemon.map((p) => <li>{p}</li>);
-        return <ul>{listItems}</ul>;
-      }
-      function Counter() {
-        const [count, setCount] = React.useState(5);
-        return (
-          <>
-            <h2>{count}</h2>
-            <button onClick={() => setCount(count + 1)}> Increment </button>
-          </>
-        );
-      }
-      function CounterThree() {
-        const [number, setNumber] = React.useState(0);
-        return (
-          <>
-            <h1>{number}</h1>
-            <button
-              onClick={() => {
-                setNumber(number + 1);
-                setNumber(number + 1);
-                setNumber(number + 1);
-              }}
-            >
-              {" "}
-              +3{" "}
-            </button>
-          </>
-        );
-      }
-
-      const root = ReactDOM.createRoot(document.getElementById("root"));
-      root.render(<App />);
-    </script>
+    <script src="stuffFromClass.js" type="text/babel"></script>
   </body>
 </html>
